minor fixes
fixed out of bounds elements
made spacing on top and bottom of header equal.

--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -72,22 +72,22 @@ body {
     background-color: #0a1d35;
   }
   .header h1 {
+    padding-top: 0.5em;
     width: 100%;
-    padding-bottom: 1%;
-    text-align: center;   
-    background-color: #0a1d35;
+    text-align: center;
+  }
+  .header h2 {
+    text-align: center;
+    padding-bottom: 0.5em;
   }
   .header:before {
     content: "";
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 1%;
     background-color: var(--main-header-line);
-  }
-  .header:after {
-    content: "";
-    position: absolute;
   }
 
   /*--- Scrollbar --*/
